<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:title="@string/edit_id"

        android:titleTextAppearance="@style/Toolbar.TitleText"
        android:elevation="4dp"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
        android:popupTheme="@android:style/ThemeOverlay.Material.Light"
        tools:targetApi="lollipop" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText8"
                android:layout_marginTop="50dp"
                android:hint="@string/name_own" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText9"
                android:hint="@string/address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText10"
                android:hint="@string/phone_no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText11"
                android:layout_gravity="center_horizontal"
                android:hint="@string/anim_type" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText12"
                android:hint="@string/anim_age" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText13"
                android:hint="@string/anim_sex" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_id"
                android:textAllCaps="true"
                android:id="@+id/button3"
                android:layout_gravity="right"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:elevation="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
