<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/anim_name"
            android:id="@+id/txtAniName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_weight="0.88" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAniID"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/anim_type"
                android:id="@+id/txtAniType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

            <TextView
                android:text="@string/anim_sex"
                android:id="@+id/txtAniSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

            <TextView
                android:text="Animal age"
                android:id="@+id/txtAniAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>