<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtAniType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/anim_type"
                android:maxLines="1"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtAniAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/anim_age"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/txtAniSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/anim_sex"
            app:met_floatingLabel="normal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom|right"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_menu_save" />

    </LinearLayout>

</LinearLayout>
