<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/tools"
    android:orientation="vertical">

    <Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        android:elevation="4dp"
        android:title="Detail Data"
        android:titleTextAppearance="@style/Toolbar.TitleText"
        android:theme="@android:style/ThemeOverlay.Material.Dark.ActionBar"
        android:popupTheme="@android:style/ThemeOverlay.Material.Light"
        tools:targetApi="lollipop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="192dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name_own"
                    android:id="@+id/textView10"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/address"
                    android:id="@+id/textView11"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/phone_no"
                    android:id="@+id/textView12"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="9dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/anim_type"
                    android:id="@+id/textView13"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="9dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/anim_age"
                    android:id="@+id/textView14"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="9dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/anim_sex"
                    android:id="@+id/textView15"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:id="@+id/txtName"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:id="@+id/txtAddress"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:id="@+id/txtPhone"
                    android:layout_marginRight="10dp" />

                <EditText
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:id="@+id/txtAType"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:id="@+id/txtAAge"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:id="@+id/txtASex"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_content"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="258dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/listViewData">
            </android.support.v7.widget.RecyclerView>

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/material_design_android_floating_action_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                fab:menu_animationDelayPerItem="55"
                fab:menu_backgroundColor="@android:color/transparent"
                fab:menu_buttonSpacing="0dp"
                fab:menu_colorNormal="#da3c2f"
                fab:menu_colorPressed="#dc4b3f"
                fab:menu_colorRipple="#99d4d4d4"
                fab:menu_fab_label="Floating Action Menu"
                fab:menu_fab_size="normal"
                fab:menu_icon="@android:drawable/ic_dialog_email"
                fab:menu_labels_colorNormal="#333"
                fab:menu_labels_colorPressed="#444"
                fab:menu_labels_colorRipple="#66efecec"
                fab:menu_labels_cornerRadius="3dp"
                fab:menu_labels_ellipsize="none"
                fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
                fab:menu_labels_margin="0dp"
                fab:menu_labels_maxLines="-1"
                fab:menu_labels_padding="8dp"
                fab:menu_labels_position="left"
                fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
                fab:menu_labels_showShadow="true"
                fab:menu_labels_singleLine="false"
                fab:menu_labels_textColor="#f2f1f1"
                fab:menu_labels_textSize="15sp"
                fab:menu_openDirection="up"
                fab:menu_shadowColor="#66aff198"
                fab:menu_shadowRadius="4dp"
                fab:menu_shadowXOffset="1dp"
                fab:menu_shadowYOffset="4dp"
                fab:menu_showShadow="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/material_design_floating_action_menu_item1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_email"
                    fab:fab_label="Menu Item 1"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/material_design_floating_action_menu_item2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_email"
                    fab:fab_label="Menu Item 2"
                    fab:fab_size="mini" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/material_design_floating_action_menu_item3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_dialog_email"
                    fab:fab_label="Menu Item 3"
                    fab:fab_size="mini" />
            </com.github.clans.fab.FloatingActionMenu>

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>
</LinearLayout>
